crates/monty/tests/heap_reader_compile_fail_cases/substitute_reader_with_vm.stderr
error[E0521]: borrowed data escapes outside of closure
   --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:284:25
    |
273 |         let a = match reader_a.read(list_id) {
    |             - `a` declared here, outside of the closure body
...
280 |             |reader_b, (interns, print)| {
    |              -------- `reader_b` is a reference that is only valid in the closure body
...
284 |                 let _ = a.get(&vm_b);
    |                         ^^^^^^^^^^^^ `reader_b` escapes the closure body here
    |
    = note: requirement occurs because of the type `HeapRead<'_, list::List>`, which makes the generic argument `'_` invariant
    = note: the struct `HeapRead<'a, T>` is invariant over the parameter `'a`
    = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
error[E0521]: borrowed data escapes outside of function
   --> crates/monty/src/../tests/heap_reader_compile_fail_cases/cases.rs:273:23
    |
269 |     interns: &crate::intern::Interns,
    |     -------  - let's call the lifetime of this reference `'1`
    |     |
    |     `interns` is a reference that is only valid in the function body
...
273 |         let a = match reader_a.read(list_id) {
    |                       ^^^^^^^^^^^^^^^^^^^^^^
    |                       |
    |                       `interns` escapes the function body here
    |                       argument requires that `'1` must outlive `'static`
For more information about this error, try `rustc --explain E0521`.
